fix overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -31,6 +31,6 @@
 
 .wrapper {
     height: 500px;
-    overflow-y: auto
+    overflow-y: scroll;
 }
 
